--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -456,21 +456,35 @@ To quantify Trump’s chances of victory, we evaluated the cumulative distributi
 
 # Discussion {sec-discussion}
 
-## First discussion point {#sec-first-point}
+## Overview and What Our Results Can Imply
 
-If my paper were 10 pages, then should be be at least 2.5 pages. The discussion is a chance to show off what you know and what you learnt from all this. 
+In this paper, we took a dataset of US presidential election polls and considered a sample of high-quality polls and the prediction they gave for Trump in the Trump vs Harris race. We focused our poll of polls model on this election’s swing states as we have a general overview of the number of seats both Harris and Trump will win outside of them and created a Bayesian model to estimate the probability of Trump being elected by estimating the probability distribution of the proportion of electoral college seats he will hold. We started with Beta priors chosen by analyzing Trump’s performance in the prior two elections. Then, we simulated 10000 elections using Monte Carlo Simulations, using our polling data to determine the Swing States Trump would win in each simulated election and used this data to create a posterior distribution for Trump’s proportion of seats. The mean of this distribution is our estimated average election outcome for the percentage of seats Trump will capture. The mean and shape of the updated beta distribution are similar to a normal distribution. In fact, it resembles the distribution of the probability of a coin flip for a large number of observations with its mean of ~0.45 compared to the coin flip’s 0.50, and with similar tails. This points to high uncertainty. In this discussion, we want to raise a question, how often can we expect to see a distribution like this, and what, if anything can we say about the population’s voting come election day?
 
-## Second discussion point
+The United States has long had an outright monopoly over electoral and congressional seats between the Democratic and Republican parties, what this distribution shows is that among registered voters who answered polls (a small, and somewhat atypical group), the margins are close within Swing States, with a slight Harris lead. This, however, doesn’t feel like a novel discovery, we already know that swing states do not have a consistent voting pattern. What we have done in this paper then is reinforce the notion that this election will be close, which adds us to the chorus of pollsters singing a similar song. As noted in our model section, we assumed that our Trump priors would affect our result, a reasonable assumption as people’s voting patterns do not tend to change drastically. Moreover, we must assume that the Monte Carlo simulations we made with the chosen learning rate are representative, which relies on the assumption that the polling data we used is reflective of reality, which is a necessary assumption and the most vital one when we look to extrapolate results about reality from a sample, which is the goal of surveying and statistics more generally. There is always reason for concern and uncertainty, but we can do nothing but trust in and maintain good statistical practice.
 
-## Third discussion point
+In conclusion, we can say only that per our data, we believe that the polls reflect that if the election were held on October 17th 2024, we expect to see Trump holding 44% of the electoral seats
 
-## Weaknesses and next steps
 
-Weaknesses and next steps should also be included.
+## Polarization in the US and accuracy of polling results
 
-\newpage
+We estimated 44% as Trump’s election rate, with a similar distribution to that of a coin flip, indicating high uncertainty. This uncertainty is not unwarranted, most other polls and aggregates are predicting this to be a close election for a number of reasons. We believe that the primary one is, that the social, cultural, and by extent, political landscape, of the United States has changed in the past four years. Saying that people are divided is nothing new, it has been a clear observation for some years now and the media have been documenting it since before Trump’s election in 2016. Economic uncertainty and general public unease make for a political landscape that is not as easily definable as it was in some previous eras of the United State’s existence. Economic inequality has risen to Great Depression levels [], with people being financially burdened to an untenable degree; people’s immediate futures are uncertain with homelessness becoming a more and more apparent threat for many. This breeds radicalization in various avenues as people look for answers and stability, with reactionary opportunists eager to satisfy. As this reactionary sentiment has grown into a new alt-right, it has brought legitimate political power to its leaders. Anti-immigration policies have only grown in popularity, Trump’s “Build The Wall” slogan is now replaced with a notion that Haitian immigrants and descendants are harming domestic animals and turning to crime in the Midwest. LGBT rights are being suppressed in parts of the country, with DeSantis’ anti-trans bill in Florida being a prime example. On the other side of the aisle, the staunchly status-quo democrats have done little to inspire hope for change, and in the face of said growing uncertainty it leaves people feeling shaken in their beliefs, and as if they are without the support of their institutions. Of course, why should they feel supported? Hurricane Helene just devastated the eastern United States and many people were left almost entirely without support for days and weeks under a Democrat administration, Roe v Wade was overturned in the same administration, does this inspire belief and hope? Without even mentioning the radicalization happening on both sides in the wake of BLM, COVID-19, the first easily visible effects of climate change for Americans, the Ukraine War, and the new Israeli cleansings and conflicts in Palestine and Lebanon, it is clear to see that the United States is in a new social paradigm, and people are looking for solutions.
 
-\appendix
+When in a new paradigm, can we expect accurate polling? The notion of Shy Tories may be weak, but what does throw a wrench in polling results is the higher-than-expected voter turnout for this race. [] We just spent a section discussing how divided and polarized people have been in the country. Pew Research Center notes that some 76% of voters believe the election outcome is crucial in 2024 and with non-response bias among Republicans having been a concern in prior elections, there is reason to believe that the polls may be inaccurate. However, polling is not done sparsely, and many polls track changes in sentiment, Pew Research Centre is showing changes in key issues as being in line with the general public discussion, so perhaps the pollsters aren’t being blindsided []. Moreover, higher political mobilization and higher polarization might mean that there is more motivation for people to voice their beliefs in polls for an election they believe is as important as it is.
+
+We must also consider the election strategies of both candidates and whether they are maximizing the votes their base of support can bring in, and whether they are growing their bases as well. We know many arab voters who are historically Democrats, have turned to the Republican side as many have lost hope in the Democrats to end the war in Gaza.  This is a simple point to the increased polarization of the country, and Democrats are not shifting policy-wise to meet voters. Harris already faces challenges as a first-time candidate, and a woman of colour, the Democratic party is not helping by having a much less easily definable policy than the Republicans. Despite this, the Dems remain more popular in polls. Of course, non-response bias is always a concern, but demographics like Michigan Arabs have given a clear polling perspective of moving right.
+
+So a key question becomes “Is it a close race due to poor polling assumptions producing uncertain polling results, or due to it truly being a close race?” We can’t know for certain until we know, but if we are to trust the polling data, it will be a close race. An important point to make is one about echo chambers. Pollsters are often criticized for publishing outlier results, which can produce bias as many pollsters converge to a consensus. As stated in the previous discussion, our individual findings are part of this general consensus, which could be a point of concern if we weren’t confident in our priors and our simulation. We reach a similar conclusion as before, we can only trust in our data and techniques.
+
+
+## Weaknesses and Next Steps
+
+As has been stated in our model assumptions, this paper does not account for any shifts that occurred after October 16th, 2024, which is critical as the weeks and days leading up to an election are the most important in determining the outcome. The model also says nothing of Harris’s seats, only Trump’s. We do not expect third parties to hold a number of seats above 3-4%, which would still signal a Harris victory, however, her results were not modelled as Trump’s were which does provide a blindspot.
+
+As for next steps, if we were to repeat our process for other election cycles, would we expect to see a similar distribution when swing states are as close as they have been for this race? Taking this direction could allow us to speak about the impact of Swing States more broadly.
+
+Additionally, producing a model for Harris and comparing it to Trump would cover a key weakness of our paper and allow for a more complete picture of voting sentiment than we have now.
+
+
 
 # Appendix 1 {#sec-appendix-one}
 
